--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -28,6 +28,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src"]
+  "include": ["src", "tests"]
 }
-
