--- a/.prettierrc
+++ b/.prettierrc
@@ -16,16 +16,17 @@
   "plugins": ["@trivago/prettier-plugin-sort-imports", "prettier-plugin-tailwindcss"],
   "importOrder": [
     "<THIRD_PARTY_MODULES>",
+    "^api/(.*)$",
     "^assets/(.*)$",
     "^components/(.*)$",
     "^constants/(.*)$",
     "^config/(.*)$",
     "^context/(.*)$",
     "^hooks/(.*)$",
-    "^modules/(.*)$",
     "^lib/(.*)$",
     "^pages/(.*)$",
     "^providers/(.*)$",
+    "^routes/(.*)$",
     "^store/(.*)$",
     "^types/(.*)$",
     "^utils/(.*)$",
