--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "tw-animate-css": "^1.3.6",
-    "typescript": "~5.7.3",
+    "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
     "vite": "^6.3.5",
     "vitest": "^3.2.4"
